--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --watch"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "eslint": "^9.31.0",
+    "globals": "^16.3.0",
     "jest": "^29.0.0",
     "supertest": "^6.0.0"
   },
